adding css file

--- a/chekpoint.html
+++ b/chekpoint.html
@@ -5,6 +5,7 @@
 
 <head>
 <title>Checkpoint</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 
@@ -13,16 +14,17 @@
     
 <nav><strong>About  work  resume  contact</strong></nav>
 
-<div>
+<div class="about">
  <h4>About</h4>
 </div>
 
-<div>
+<div class="work">
    <h4>work</h4>
 </div>
 
 <div>
-   <strong>Resume</strong><br>
+   <strong>Resume</strong>
+   <br>
 
    <form>
     name<br>
@@ -55,17 +57,17 @@
 
 
 <div>
-    <h1>A little video to</h1>
-    </div>
+   <h1>A little video to</h1>
+</div>
 
-    <iframe 
-    width="900" 
-    height="506" 
-    src="https://www.youtube.com/embed/O8y7vyVwK4o" 
-    title="8K ANIME GLOW (Uzui VS Gyutaro)" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen>
+<iframe 
+ width="900" 
+ height="506" 
+ src="https://www.youtube.com/embed/O8y7vyVwK4o" 
+ title="8K ANIME GLOW (Uzui VS Gyutaro)" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+ allowfullscreen>
 </iframe>
 
 
